fixing overlapping span

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ footer h6 {
     left: 0;
     right: 0;
     padding: 10px;
+    margin: 0 15px;
     text-align: center;
     color: #fff;
     -webkit-transform: translateY(100px);
